--- a/TeacherPortalAs/Components/Layout/MainLayout.razor
+++ b/TeacherPortalAs/Components/Layout/MainLayout.razor
@@ -8,4 +8,11 @@
             @Body
         </article>
     </main>
-</div> 
+</div>
+
+@code {
+    // Добавляем конструктор по умолчанию
+    public MainLayout()
+    {
+    }
+} 
