--- a/TeacherPortalAs/Components/Layout/MainLayout.razor
+++ b/TeacherPortalAs/Components/Layout/MainLayout.razor
@@ -1,4 +1,6 @@
 @using TeacherPortalAs.Components.Layout
+@using Microsoft.AspNetCore.Components
+
 @inherits LayoutComponentBase
 
 <div class="page">
