--- a/TeacherPortalAs/_Imports.razor
+++ b/TeacherPortalAs/_Imports.razor
@@ -14,3 +14,6 @@
 @using TeacherPortalAs.Components.Pages.Admin.Components
 @using TeacherPortalAs.Models
 @using TeacherPortalAs.Services
+@using Microsoft.AspNetCore.Components
+@using Microsoft.AspNetCore.Components.Web
+@using TeacherPortalAs.Components.Layout
