--- a/TeacherPortalAs/Components/Layout/MainLayout.razor
+++ b/TeacherPortalAs/Components/Layout/MainLayout.razor
@@ -1,20 +1,20 @@
-@using TeacherPortalAs.Components.Layout
 @using Microsoft.AspNetCore.Components
-
-@inherits LayoutComponentBase
 
 <div class="page">
     <main>
         <NavMenu />
         <article class="content">
-            @Body
+            @ChildContent
         </article>
     </main>
 </div>
 
 @code {
-    // Добавляем конструктор по умолчанию
+    [Parameter]
+    public RenderFragment? ChildContent { get; set; }
+
     public MainLayout()
     {
+        // Пустой конструктор
     }
 } 
