--- a/TeacherPortalAs/Components/Layout/NavMenu.razor
+++ b/TeacherPortalAs/Components/Layout/NavMenu.razor
@@ -1,3 +1,6 @@
+@using Microsoft.AspNetCore.Components
+@using Microsoft.AspNetCore.Components.Routing
+
 <nav class="top-nav">
     <div class="nav-brand">
         <a href="">Учительский портал</a>
