--- a/TeacherPortalAs/Components/Pages/Admin/Components/MaterialsManager.razor
+++ b/TeacherPortalAs/Components/Pages/Admin/Components/MaterialsManager.razor
@@ -21,8 +21,8 @@
             <table class="data-table">
                 <thead>
                     <tr>
+                        <th>ID</th>
                         <th>Название</th>
-                        <th>Описание</th>
                         <th>Предмет</th>
                         <th>Действия</th>
                     </tr>
@@ -31,9 +31,9 @@
                     @foreach (var material in materials)
                     {
                         <tr>
+                            <td>@material.Id</td>
                             <td>@material.Title</td>
-                            <td>@material.Description</td>
-                            <td>@(subjects?.FirstOrDefault(s => s.Id == material.SubjectId)?.Name ?? "Не указан")</td>
+                            <td>@(subjects?.FirstOrDefault(s => s.Id == material.SubjectId)?.Name ?? "-")</td>
                             <td class="actions-cell">
                                 <button class="action-button btn-edit" @onclick="() => EditMaterial(material)">
                                     <i class="fas fa-edit"></i>
@@ -62,11 +62,6 @@
                     <input id="title" class="form-control" @bind="editingMaterial.Title" />
                 </div>
                 
-                <div class="form-group">
-                    <label for="description">Описание</label>
-                    <textarea id="description" class="form-control" @bind="editingMaterial.Description"></textarea>
-                </div>
-
                 <div class="form-group">
                     <label for="subject">Предмет</label>
                     <select id="subject" class="form-control" @bind="editingMaterial.SubjectId">
